Show the hand cursor if there is no colorize mask yet

BUG:415935